--- a/Trabalho2/app/src/main/res/layout/activity_main.xml
+++ b/Trabalho2/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,6 @@
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
             app:layout_constraintEnd_toStartOf="@+id/editBtn" android:layout_marginEnd="8dp"
             android:importantForAutofill="no" android:hint="@string/IdHintEditTxt" android:textAlignment="center"
-            android:inputType="text"/>
+            android:inputType="phone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
